--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -17,6 +17,12 @@
   right: 0;
 }
 
+.top_right {
+  top: 100px;
+  left: 85%;
+  position: fixed;
+  }
+
 .centered {
   position: absolute;
   top: 50%;
@@ -26,7 +32,8 @@
 }
 
 .name_title {
-  font-size: 48px;
+  font-size: 50px;
+  font-weight: 600;
   color: black;
   text-align: left;
   padding-bottom: 20px;
@@ -39,4 +46,11 @@
 .profile_image {
   width: 500px;
   height: auto;
+  border-style: solid;
+  border-width: 20px;
+  border-radius: 15px;
+}
+
+.logo {
+  position: relative;
 }
